moving example of family that withdrew

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -243,7 +243,7 @@ Phase one was an extended, exploratory series of game making sessions over sever
 |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools
 
 
-#### DA: Development Stage
+#### D1: Development Stage
 
 One-off workshops at Mozilla, Feral Vector and Manchester libraries events and to PGCE computer students helped focus and the creation of a “half baked” game template and supporting online and printable resources.
 
@@ -741,26 +741,37 @@ Activity theory has a broad definition of the concept of tool which in this cont
 
 
 
-### Narrative descriptions of shifts from P1 to P2
+### Narrative descriptions of shifts of tool use from P1 to P2
+
+I had two tools in mind at the start of P1 but without a method of how to implement them or relevant supporting resources. They were Mozilla's code playground Thimble [], and a professional, open source, javascript library for web game making called Phaser.js. I had used Thimble in earlier work teaching javascript, a snapshot of which is available as PGCE dissertation [@chesterman_webmaking_2015].
+
+<!-- Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process. -->
+
+The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools (explored in the introduction). With little structured support, and given the complexities of learning text based languages, significant areas of contradictions arose between the need of participants to use key tools to create games and their limited skills and experience in using them.
+
+<!-- In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. -->
 
 
-Contradictions arose between the need of participants to use key tools to create games and their lack of experience of them. Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process.
+Thus in response to need, several weeks in to P1, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game.
 
-In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding.
-
-
+<!-- At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. -->
 
 
-**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
-
-
-
-While this is to be expected given the novice status of the participants, contextual factors complicate this contradiction further. For example, the process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools (explored in the introduction).
-
-While, gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting encouraged me to prioritise approaches which avoided written or to whole class instruction. My motivations here were also supported by experiences in P1 documented in my journal. I found attempts to convene attention on a presentation screen for instruction based teaching to class uncomfortable, stemming from my judgement that these interventions to be unwelcome interruptions for the participants making activities.  
+The informal nature of this learning setting encouraged me to prioritise approaches which avoided written or to whole class instruction. My motivations here were also supported by experiences in P1 documented in my journal. I found attempts to convene attention on a presentation screen for instruction based teaching to class uncomfortable, stemming from my judgement that these interventions to be unwelcome interruptions for the participants making activities.  
 
 
 The resulted in a design challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction. The following sections explore the evolution of the tool selection and the tool use of participants in response to this conflict in the game making activity system.
+
+
+#### Illustration of a conflict experienced by families
+
+This informs this section C1 and C3. 
+
+I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme. While members of this family were able to engage in planing via sketching on paper and in creating pixel art, in later stages they were reliant on others to implement code changes. The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next. A 3d bee design roaming a 3D landscape. I encouraged personal expression for the purposes of engagement and motivation. However, here it can lead to conflict and frustration as the desired changes of the child were not realistic to the technical scope of the project. The previous section explored the use of two dimensional (2D) platformer game as a technical template in P2. I also addressed participant expectations of an acceptable project scope for our timeframe as a non technical process.
+<!--
+When the family withdrew, in my journal notes I reflected that the they shared of alienation from the group process occurred in a session where, due to a sense of urgency to complete games, I had omitted drama-based warm up activities. Instead as participant entered I began to support to help some participants debug some pressing code errors. -->
+
+When the family withdrew, they shared in feedback (see appendix 4.x) the moment that decided their withdrawal. that at one point they "looked around and just saw people doing hardcore coding and no longer felt that they belonged". In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated. Thus a contributing factor to this families alienation were tensions engendered by the large group size and compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. This feedback contributed to choices outlined in other sections of this chapter. (WHICH ONES)
 
  <!-- namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement. -->
 
@@ -782,13 +793,12 @@ The resulted in a design challenge involved designing a bespoke  game authoring 
 
 ### Using a starter game template
 
-FOCUS ON THE TENSION FIRST AND SHIFT FROM P1 -> P2
+The initial use of a working structural template was based on my previous experience of teaching javascript to novices [@chesterman_webmaking_2015].
+
+The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in part two of this section had more hands on play and use of the tools of production before being called on to make creative decision, likening this to an arts studio approach.
 
 By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. The following section outlines responsive design process surrounding two main elements: the starting game code template and the code authoring toolset.
 
-
-
-The initial use of a working structural template was an intuitive response based on my own experience of teaching technology. The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in part two of this section had more hands on play and use of the tools of production before being called on to make creative decision, likening this to an arts studio approach.
 
 I realised that to allow for this playful experimentation, a purely structural template was insufficient and that a working game template was preferred. To create the template I drew on the structure of online starter templates from several sources  to create a minimal template for a two-dimensional platformer game.
 
@@ -1343,20 +1353,16 @@ An additional rationale for this process was to help reduce potential internal b
 <!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),** -->
 
 <!-- In an early crisis point, one of the children  was not able to implement a desired feature as the 3D experience was beyond the technical possibilities of the code framework. -->
-MAKE MORE OF THE P1 -> P2 SHIFT AT START
 
 
+#### Revisiting narrative  
 
-#### Shift from p1 - p2 -  
+
+The experience of the family with withdrew aligns with research addressing barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. The story is an example of a conflict composed of accumulating tensions which resulting alienation from the group coding environment and associated peer working dynamics.
+
+My journal notes detailed an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. These are detailed in summary form in this section and in more depth in chapter six.
 
 
-This experience aligns with research in this area explored in the literature review which explore pedagogies to address barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. These contradictions involved accumulating tensions which resulted in families feeling anxiety and alienation from the group coding environment and associated peer working dynamics. My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. These are detailed later.
-
-I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme. While members of this family were able to engage in planing via sketching on paper and in creating pixel art, in later stages they were reliant on others to implement code changes. The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next. A 3d bee design roaming a 3D landscape. I encouraged personal expression for the purposes of engagement and motivation. However, here it can lead to conflict and frustration as the desired changes of the child were not realistic to the technical scope of the project. The previous section explored the use of two dimensional (2D) platformer game as a technical template in P2. I also addressed participant expectations of an acceptable project scope for our timeframe as a non technical process.
-<!--
-When the family withdrew, in my journal notes I reflected that the they shared of alienation from the group process occurred in a session where, due to a sense of urgency to complete games, I had omitted drama-based warm up activities. Instead as participant entered I began to support to help some participants debug some pressing code errors. -->
-
-When the family withdrew, they shared in feedback (see appendix 4.x) the moment that decided their withdrawal. that at one point they "looked around and just saw people doing hardcore coding and no longer felt that they belonged". In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated. Thus a contributing factor to this families alienation were tensions engendered by the large group size and compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. This feedback contributed to choices outlined in other sections of this chapter. (WHICH ONES)
 
 Some barriers stemming from alienation from participant group workin
 g processes were resolved partly by freeing up some patterns of collaboration and interaction and removing others.
