restructuring design chapter

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -10,8 +10,6 @@ number-sections: true
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
-
-
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
     -   [Research Questions - April
@@ -25,7 +23,7 @@ title: 4. Exploration of the Formative Learning Design Process
             study](#phases-and-resources-of-the-study)
             -   [P1: A phase of exploratory, cocreative game
                 making](#p1-a-phase-of-exploratory-cocreative-game-making)
-            -   [DA: Development Stage](#da-development-stage)
+            -   [D1: Development Stage](#d1-development-stage)
             -   [P2: Accelerated game making programme (5
                 weeks):](#p2-accelerated-game-making-programme-5-weeks)
             -   [P4: Adding a process drama to the game making
@@ -57,8 +55,10 @@ title: 4. Exploration of the Formative Learning Design Process
     -   [C1 - contradictions involving the use of game programming and
         asset authoring
         tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
-        -   [Narrative descriptions of shifts from P1 to
-            P2](#narrative-descriptions-of-shifts-from-p1-to-p2)
+        -   [Narrative descriptions of shifts of tool use from P1 to
+            P2](#narrative-descriptions-of-shifts-of-tool-use-from-p1-to-p2)
+            -   [Illustration of a conflict experienced by
+                families](#illustration-of-a-conflict-experienced-by-families)
         -   [Using a starter game
             template](#using-a-starter-game-template)
             -   [Variable editing for player
@@ -66,10 +66,8 @@ title: 4. Exploration of the Formative Learning Design Process
             -   [Simple block graphics](#simple-block-graphics)
             -   [Level design and
                 prototyping](#level-design-and-prototyping)
-        -   [Design adaptations to facilitate novice use of a code
-            playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
-            -   [Remixing and community
-                inspiration](#remixing-and-community-inspiration)
+            -   [Design adaptations to facilitate novice use of a code
+                playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
             -   [Addressing code syntax
                 errors](#addressing-code-syntax-errors)
             -   [Distributed vs. self-contained approaches to asset
@@ -93,7 +91,7 @@ title: 4. Exploration of the Formative Learning Design Process
         -   [Design narrative on conflict due to identity clashes and
             dysfunctional group
             work](#design-narrative-on-conflict-due-to-identity-clashes-and-dysfunctional-group-work)
-            -   [Shift from p1 - p2 -](#shift-from-p1---p2--)
+            -   [Social coding processes](#social-coding-processes)
         -   [REMOVED](#removed)
         -   [Playtesting as a cultural
             process](#playtesting-as-a-cultural-process)
@@ -102,9 +100,10 @@ title: 4. Exploration of the Formative Learning Design Process
             -   [Local playtesting rather than participation with a
                 wider online
                 community](#local-playtesting-rather-than-participation-with-a-wider-online-community)
-        -   [Shift to P3 Drama process and what kind of Maker are
-            you](#shift-to-p3-drama-process-and-what-kind-of-maker-are-you)
         -   [On a drama processes](#on-a-drama-processes)
+            -   [Motivations and genesis of the drama process (what kind
+                of Maker are
+                you)](#motivations-and-genesis-of-the-drama-process-what-kind-of-maker-are-you)
             -   [Description drama process using extracts from vignettes
                 and concepts of
                 MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe)
@@ -765,7 +764,7 @@ The resulted in a design challenge involved designing a bespoke  game authoring 
 
 #### Illustration of a conflict experienced by families
 
-This informs this section C1 and C3. 
+This informs this section C1 and C3.
 
 I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme. While members of this family were able to engage in planing via sketching on paper and in creating pixel art, in later stages they were reliant on others to implement code changes. The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next. A 3d bee design roaming a 3D landscape. I encouraged personal expression for the purposes of engagement and motivation. However, here it can lead to conflict and frustration as the desired changes of the child were not realistic to the technical scope of the project. The previous section explored the use of two dimensional (2D) platformer game as a technical template in P2. I also addressed participant expectations of an acceptable project scope for our timeframe as a non technical process.
 <!--
@@ -802,11 +801,22 @@ By P2, learners first experience of the experience of the tools was in the proce
 
 I realised that to allow for this playful experimentation, a purely structural template was insufficient and that a working game template was preferred. To create the template I drew on the structure of online starter templates from several sources  to create a minimal template for a two-dimensional platformer game.
 
+**Tension of a group remixing from one template rather than feeler community inspiration and interaction**
+
+A guiding principles of more recent constructionist design work is the facilitation of promoting community inspiration and interaction [Kafai etc]. In the Scratch community this is achieved through and extensive online community which encourages remixing, collaboration and peer review via comments [ @monroy-hernandez_cooperation_nodate; @cress_supporting_2016].
+
+<!-- The shared community element on the other hand was quite different for glitch.com web playground tool due to its very mixed user base and range of different web based projects.  -->
+
+In this learning design I took a decision to not promote this online community as a source of inspiration and code bases. Instead one code base was promoted. This had the benefit of simplifying the process of supporting code errors, and promoting peer support, sharing and problem solving due to the use of similar code bases. In journal entries I noted this choice as one which was made in awareness of a tension between, freedom of community inspiration and practicalities of supporting complex coding errors.
+
+
+
+<!-- Sharing of ideas and inspiration did happen both on the playtesting of each others games and via incidental exposure to the online work of others. This happened as they shared log account details and thus when logging in to access their own work they would also see and have access to the code and graphical creations of others. I took advantage of this shared access in shared socThus  affordance ial and playful missions which are described later in this chapter. -->
+
+
 <!-- The following section describes designs decisions relevant to the evolution of this starting template by drawing on concepts explored in the literature review, namely: UMC approaches; constructionist design heuristics; and the domain of human-computer interaction (HCI) research. In particular, I explore the concept of affordances understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].   -->
 
 **Structural design of the game template**
-
-
 
 A web code project using the chosen game framework
 phaser consists of several interlinked files of Javascript, HTML and CSS and image files. (see glossary & appendix 4.x)
@@ -958,7 +968,7 @@ Despite building familiarity with code, at this stage event simple game changes 
  -->
 
 
-### Design adaptations to facilitate novice use of a code playground
+#### Design adaptations to facilitate novice use of a code playground
 
 <!-- Self-contained so many things set up by default,
 a default screen size, asset creation tools, online community, comments and friend section.  -->
@@ -984,11 +994,7 @@ These elements include steps to reducing syntax errors, shielding complexity, fa
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
 
 
-#### Remixing and community inspiration
 
-The literature review outlined that one of the key principles of constructionist approach is promoting community inspiration and interaction. In the Scratch community this is achieved through and extensive online community which encourages remixing, collaboration and peer review via comments [ @monroy-hernandez_cooperation_nodate; @cress_supporting_2016].
-
-The shared community element on the other hand was quite different for glitch.com web playground tool due to its very mixed user base and range of different web based projects. In this learning design I took a decision to not promote this online community as a source of inspiration and code bases. Instead one code base was promoted. Sharing of ideas and inspiration did happen both on the playtesting of each others games and via incidental exposure to the online work of others. This happened as they shared log account details and thus when logging in to access their own work they would also see and have access to the code and graphical creations of others. I took advantage of this shared access in shared socThus  affordance ial and playful missions which are described later in this chapter.
 
 #### Addressing code syntax errors
 
@@ -1354,39 +1360,34 @@ An additional rationale for this process was to help reduce potential internal b
 
 <!-- In an early crisis point, one of the children  was not able to implement a desired feature as the 3D experience was beyond the technical possibilities of the code framework. -->
 
+The experience of the family with withdrew outlined in C1  aligns with research addressing barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. The story is an example of a conflict composed of accumulating tensions which resulting alienation from the group coding environment and associated peer working dynamics.
 
-#### Revisiting narrative  
+The incident lead me to greater reflection on ongoing measures needed to prevent participant drop out for due to cultural tensions and negative affect to the working community. These include:
 
+-   An awareness of the danger that those more confident in coding create more involved code problems that need more facilitator time, potentially making others feel less valued.
+-   A concern for the fragility of learners positive affect towards the group game making process and thus the need for initial playful starting and closing activities to be continued beyond initial sessions.
+-   The value of a stronger buy-in by participants, ideally a greater commitment to the collective making process balanced with the need for low pressure (avoiding a negative sense of obligation).
 
-The experience of the family with withdrew aligns with research addressing barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. The story is an example of a conflict composed of accumulating tensions which resulting alienation from the group coding environment and associated peer working dynamics.
+My journal notes detailed an evolution of attempts during P2 and P3 to try to build into the program, a variety of activities which help build the participants sense of their own identities of game makers or more generally digital designers. While chapter six examines these aspects in more depth, the evolution of key design features are summarised in this section, namely social coding processes,  playtesting and the use of a drama process.
 
-My journal notes detailed an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. These are detailed in summary form in this section and in more depth in chapter six.
+#### Social coding processes
 
-
-
-Some barriers stemming from alienation from participant group workin
-g processes were resolved partly by freeing up some patterns of collaboration and interaction and removing others.
+Some barriers stemming from alienation from participant group working processes were resolved partly by freeing up some patterns of collaboration and interaction and removing others.
 
 The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Together with the frustrations of complexities of larger group work the restrictions created a tension between the suggested community norm of how division of labour was organised.
 
 Thus in P2, rather than the larger groups of P1, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group fragmentation and encouraging freedom of participation vs benefiting from parental involvement.
 
 
-P2 introduced some of the changes
-- Keeping games working to allow for less frustation - this promoted more playtestin time. explored next.
-
-
-
 
 
 <!-- Based on my previous teaching experience, analysis of literature and knowledge of platform games, I pre-prepared a set of coded example and tutorials to implement a range of game design patterns. -->
 
-DROP - COMPRESS - CONCLUSION?
-The incident lead me to greater reflection on ongoing measures needed to prevent participant drop out for due to cultural tensions and negative affect to the working community. These include:
 
--   An awareness of the danger that those more confident in coding create more involved code problems that need more facilitator time, potentially making others feel less valued.
--   A concern for the fragility of learners positive affect towards the group game making process and thus the need for initial playful starting and closing activities to be continued beyond initial sessions.
--   The value of a stronger buy-in by participants, ideally a greater commitment to the collective making process balanced with the need for low pressure (avoiding a negative sense of obligation).
+
+
+P2 introduced some of the changes
+- Keeping games working to allow for less frustation - this promoted more playtestin time. explored next.
 
 
 
@@ -1470,7 +1471,36 @@ A primary concern here were the time consideration of the process of being invol
 
 More pragmatically, in this situation the use of a more professional framework, and a lack of dedicated site run for children reduced the scope for this kind of interaction.   
 
-### Shift to P3 Drama process and what kind of Maker are you
+
+<!-- #### A game encouraging maker / player types
+
+The drama process work in P3 to develop ways to encourage diverse and playful approaches to making had its roots in a game introduced in P2 where participants took part in an interactive the Bartle test. The Bartle test draws on work which ...
+
+The full process and rationale and initial reactions are detailed in appendix 4.x . In summary,
+
+The process was very engaging, parents responded that the process gave them new insight into the digital identities of their children. As part of the process I then proposed that there different game maker types and asked participants to evaluate and discuss with peers what kind of game maker they were. From the following list.
+
+-   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
+- **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
+-   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
+-   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
+
+
+DATA REQUIRED FROM VIDEO!?
+
+This self evaluation helped confirm my own observations of different motivations driving different participation behaviours. Fuller discussion follows in chapter six.
+
+The success of activity spurred the creation of the creation of side-missions to be carried out in from of a dramatic process.
+
+AND - link more -->
+
+### On a drama processes
+
+The introduction of a drama process was introduced in response to a the barriers to participation caused by not identifying with the culture of coding or gaming.
+
+
+
+#### Motivations and genesis of the drama process (what kind of Maker are you)
 
 By the end of p2 most of the tools and main processes were in place.
 
@@ -1500,31 +1530,8 @@ I incorporated it into an animation of the resources home page.
 ![Illustration 4.x - What kind of game maker are you  ](./Pictures/kindofgamemaker.png){width=95%}
 
 
-<!-- #### A game encouraging maker / player types
-
-The drama process work in P3 to develop ways to encourage diverse and playful approaches to making had its roots in a game introduced in P2 where participants took part in an interactive the Bartle test. The Bartle test draws on work which ...
-
-The full process and rationale and initial reactions are detailed in appendix 4.x . In summary,
-
-The process was very engaging, parents responded that the process gave them new insight into the digital identities of their children. As part of the process I then proposed that there different game maker types and asked participants to evaluate and discuss with peers what kind of game maker they were. From the following list.
-
--   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
-- **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
--   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
--   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
 
 
-DATA REQUIRED FROM VIDEO!?
-
-This self evaluation helped confirm my own observations of different motivations driving different participation behaviours. Fuller discussion follows in chapter six.
-
-The success of activity spurred the creation of the creation of side-missions to be carried out in from of a dramatic process.
-
-AND - link more -->
-
-### On a drama processes
-
-The introduction of a drama process was introduced in response to a the barriers to participation caused by not identifying with the culture of coding or gaming.
 
 <!-- #### A game encouraging maker / player types
 
@@ -1618,7 +1625,7 @@ Here we are looking at something cultural?? -->
 - link to side missions of adventure games - zelda - perhaps find motivation there too. -->
 <!-- NOTE Examine MoE and this process drama in more general terms, then explore a -->
 <!-- (using AT theory and other relevant concepts - which are developed further in final discussion). -->
-<!-- It is of value to briefly discussion the value of the missions in relation to drama process theory and play theory.  -->
+<!-- It is of value to briefly discussion the value of the missions in relation to drama process theory and# play theory.  -->
 <!-- I first encountered these kinds of secret missions in a session which explored game design theory via creating a game collaboratively. [^1] -->
 <!-- The secret missions were part of this workshop
 https://playthinklearn.net/blog/ten-steps-to-game-design/ -->
