--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -11,7 +11,7 @@
             study](#phases-and-resources-of-the-study)
             -   [P1: A phase of exploratory, cocreative game
                 making](#p1-a-phase-of-exploratory-cocreative-game-making)
-            -   [DA: Development Stage](#da-development-stage)
+            -   [D1: Development Stage](#d1-development-stage)
             -   [P2: Accelerated game making programme (5
                 weeks):](#p2-accelerated-game-making-programme-5-weeks)
             -   [P4: Adding a process drama to the game making
@@ -43,8 +43,10 @@
     -   [C1 - contradictions involving the use of game programming and
         asset authoring
         tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
-        -   [Narrative descriptions of shifts from P1 to
-            P2](#narrative-descriptions-of-shifts-from-p1-to-p2)
+        -   [Narrative descriptions of shifts of tool use from P1 to
+            P2](#narrative-descriptions-of-shifts-of-tool-use-from-p1-to-p2)
+            -   [Illustration of a conflict experienced by
+                families](#illustration-of-a-conflict-experienced-by-families)
         -   [Using a starter game
             template](#using-a-starter-game-template)
             -   [Variable editing for player
@@ -52,10 +54,8 @@
             -   [Simple block graphics](#simple-block-graphics)
             -   [Level design and
                 prototyping](#level-design-and-prototyping)
-        -   [Design adaptations to facilitate novice use of a code
-            playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
-            -   [Remixing and community
-                inspiration](#remixing-and-community-inspiration)
+            -   [Design adaptations to facilitate novice use of a code
+                playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
             -   [Addressing code syntax
                 errors](#addressing-code-syntax-errors)
             -   [Distributed vs. self-contained approaches to asset
@@ -79,7 +79,7 @@
         -   [Design narrative on conflict due to identity clashes and
             dysfunctional group
             work](#design-narrative-on-conflict-due-to-identity-clashes-and-dysfunctional-group-work)
-            -   [Shift from p1 - p2 -](#shift-from-p1---p2--)
+            -   [Social coding processes](#social-coding-processes)
         -   [REMOVED](#removed)
         -   [Playtesting as a cultural
             process](#playtesting-as-a-cultural-process)
@@ -88,9 +88,10 @@
             -   [Local playtesting rather than participation with a
                 wider online
                 community](#local-playtesting-rather-than-participation-with-a-wider-online-community)
-        -   [Shift to P3 Drama process and what kind of Maker are
-            you](#shift-to-p3-drama-process-and-what-kind-of-maker-are-you)
         -   [On a drama processes](#on-a-drama-processes)
+            -   [Motivations and genesis of the drama process (what kind
+                of Maker are
+                you)](#motivations-and-genesis-of-the-drama-process-what-kind-of-maker-are-you)
             -   [Description drama process using extracts from vignettes
                 and concepts of
                 MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe)
