working on intro

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -168,19 +168,19 @@ I originally structured the chapter around observations structured in the phases
 
 This chapter contains a high level of detail on the technical elements of the learning design to situate the findings of the next chapter and to allow the design to be by other practitioners and researchers in this area. The format of this chapter can be conceived as a design narrative [@hoadley_creating_2002]. To do to this I include narrative descriptions of shifts between phases of design as it mutually evolved over time. The concept of design narrative emerged from DBR as a way to communicate the important detail of context [@hoadley_creating_2002; @brase_knowledge_2024; @bell_theoretical_2004;]. While DBR has its own language of argumentation [@brase_knowledge_2024] in this chapter creates a design narrative using the rich set of descriptive and analytical tools provided by third generation activity theory (3GAT). Specifically this chapter identifies, key activity units/systems, names system elements, addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design.
 
-Firstly, I describe activity systems at different scopes, focusing on the objective of participants and drawing on a vignette illustrating indicative participant activity.
+Firstly, I describe phases of delivery of the formative intervention in the form of a family game making programme.
 
-Following this, I explore shifts in the design of the intevention.
+Secondly, I decribe activity systems at different scopes, using typology of systems element provided by 3GAT, and the concepts of double stimulation.
 
-tensions in design in a way which communicates relevant context through the analysis of three areas of emerging contradictions in activity. In line with Kutti [-@kuutti_activity_1995], the term area of contradictions is used as a wrapper for more specific tensions, barriers, breakdowns, conflicts that indicate an "unfit with (system) elements .
+Following this, I explore shifts in the design of the intervention.
 
-Three main areas of contradictions are explored in this chapter are as follows.
+tensions in design in a way which communicates relevant context through the analysis of three areas of emerging contradictions in activity.
 
-*Contradictions arising in use of coding tool use and game asset creation* - often experienced as more individual level
 
-*Contradictions associated with project navigation and the use of supporting documentation:* interpreted here through the lens of guided participation
+Three main areas of contradictions are explored in this chapter are as follows: in use of software tool use, those associated with project navigation and the use of supporting documentation, those surrounding cultural aspects of the game making activity.
 
-*Responding to contradictions  in cultural aspects of the game making activity:* In this section, I examine the impact of a process drama with an aim to establish and nurture community practice, exploring the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame.
+<!-- In this section, I examine the impact of a process drama with an aim to establish and nurture community practice, exploring the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame. -->
+
 This chapter ends with a synthesis to initial barriers to engaging in game making practices and initial interventions to address them.
 
 
