--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -166,26 +166,15 @@ I originally structured the chapter around observations structured in the phases
 --- -->
 <!-- Due to the novel nature of the learning design, a detailed outline of the specifics of the participants experience of the design helps readers situate  the findings of the following two chapters. -->
 
-This chapter contains a high level of detail on the technical elements of the learning design to situate the findings of the next chapter and to allow the design to be by other practitioners and researchers in this area. The format of this chapter can be conceived as a design narrative [@hoadley_creating_2002]. To do to this I include narrative descriptions of shifts between phases of design as it mutually evolved over time. The concept of design narrative emerged from DBR as a way to communicate the important detail of context [@hoadley_creating_2002; @brase_knowledge_2024; @bell_theoretical_2004;]. While DBR has its own language of argumentation [@brase_knowledge_2024] in this chapter creates a design narrative using the rich set of descriptive and analytical tools provided by third generation activity theory (3GAT). Specifically this chapter identifies, key activity units/systems, names system elements, addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design.
+This chapter contains a high level of detail on the technical elements of the learning design to situate the findings of the next chapter and to allow the design to be by other practitioners and researchers in this area. The format of this chapter can be conceived as a design narrative [@hoadley_creating_2002]. To do to this I include narrative descriptions of shifts between phases of design as it mutually evolved over time. The concept of design narrative emerged from DBR as a way to communicate the important detail of context [@hoadley_creating_2002; @brase_knowledge_2024; @bell_theoretical_2004;]. While DBR has its own language of argumentation [@brase_knowledge_2024] in this chapter creates a design narrative using the rich set of descriptive and analytical tools provided by third generation activity theory (3GAT).
 
-Firstly, I describe phases of delivery of the formative intervention in the form of a family game making programme.
-
-Secondly, I decribe activity systems at different scopes, using typology of systems element provided by 3GAT, and the concepts of double stimulation.
-
-Following this, I explore shifts in the design of the intervention.
-
-tensions in design in a way which communicates relevant context through the analysis of three areas of emerging contradictions in activity.
-
-
-Three main areas of contradictions are explored in this chapter are as follows: in use of software tool use, those associated with project navigation and the use of supporting documentation, those surrounding cultural aspects of the game making activity.
+Firstly, I describe phases of delivery of the formative intervention in the form of a family game making programme. Secondly, I describe activity using the systemic methodology provided by 3GAT. Specifically, I identify activity units/systems, name system elements, and addresses the evolution of the key pedagogical features used in my research process using analysis of emerging tensions between system elements in learning design. Following this, exploration of the shifts in the design of the intervention is done via a development of a design narrative which explores the driving forces behind changes in the design of each phase. This narrative is enriched by more in-depth analysis of three key areas of emerging areas of contradictions in activity. The three main areas of contradictions are explored in this chapter are as follows: in use of software tool use, those associated with project navigation and the use of supporting documentation, those surrounding cultural aspects of the game making activity. This chapter ends with a synthesis of initial barriers to engaging in game making practices encountered in this study and the resultant responses.
 
 <!-- In this section, I examine the impact of a process drama with an aim to establish and nurture community practice, exploring the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame. -->
 
-This chapter ends with a synthesis to initial barriers to engaging in game making practices and initial interventions to address them.
 
 
-MOVE TO DISCUSSION IF THERE IS A SUITABLE SPACE
-The drama process is an example of an introduced cultural tool. The process acts as wrapper to several supporting techniques. the side missions to and to sanction different approaches, the imagined audience encourages reflection and semi-authentic approaches. It is the most advanced tools of a range that was put into place to create a space suitable for creativity, collaboration and self expression.
+
 
 ## Summary of design evolution
 
@@ -211,21 +200,11 @@ Fig. 4.x Summary of delivery phases and development periods
 
 
 
-NOTE REPLACE THE TABLE WITH NARRATIVE TEXT USING THE TABLE CONTENTS AND THAT BELOW.
-THIS IS DESCRIPTIVE, INCLUDES TOOLS, AND PROCESSES BUT NO ANALYSIS, RATIONALE, OR TENSIONS
-
 [Summary Table of Stages](https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#)
 
 
 
-
-
-|   |   |
-| P3: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
-| P4: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
-
-
-#### P1: A phase of exploratory, cocreative game making
+#### P1: A phase of exploratory, co-creative game making - October 2017 to March 2018  
 
 <!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
 <!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
@@ -234,15 +213,13 @@ THIS IS DESCRIPTIVE, INCLUDES TOOLS, AND PROCESSES BUT NO ANALYSIS, RATIONALE, O
 **Participants started with no set plan or toolset and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. After several weeks, a minimal incomplete starting game code template was introduced in response to student need.**
 
 
-Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. Several weeks in to the processs, a starting template adapated from a phaser community tutorial, used as to scaffold the production of games.  
+Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. Several weeks in to the processes, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
 
 
-
-**Tools used:**
-|  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools
+**Tools used:** Phaser javascript library; Thimble code playground; online graphics editor Piskel; a varied set of other graphical and audio asset creation tools.
 
 
-#### D1: Development Stage
+#### D1: Development Stage - May 2018 to December 2018
 
 One-off workshops at Mozilla, Feral Vector and Manchester libraries events and to PGCE computer students helped focus and the creation of a “half baked” game template and supporting online and printable resources.
 
@@ -322,28 +299,35 @@ The concept of the feel of the game or the challenges maps to the Dynamics of MD
  -->
 
 
-#### P2: Accelerated game making programme (5 weeks):
+#### P2: Accelerated game making programme  - 5 weeks in January to February 2019
 
 **Glitch Game Club**
 First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve.
-**Tools:**
-Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  
+
+
+**Tools used:** Phaser; Glitch code playground replaces Thimble, Piskel; a starter game template; quick start cards; step-by-step tutorials; code snippet examples.  
 
 
 By the beginning of P2 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the template that stemmed from participant feedback and my reflections. Key additions at this stage to support the use of a template were a collection of tutorials and code examples illustrating key game features that had been requested by participants. The collection of game patterns were presented in a web page together with the starting template and a link to an online book collecting the process into step-by-step chapter based tutorials. The resources are explored in more depth in sections three and four below. A more complete description of the resources used in P2 and P3 are included in appendix 4.x.The experimental team consisted of Home Educating families . Learners acted as researcher participants to guide the next iteration of the game making program both directly and indirectly.
 
 Direct input was through requests and informal feedback and structured end-of-course interviews. Indirect input came from research data in the form on the games participants created, my research journal entries on my interactions with and observations of participants and recorded audio and video data of the participants and their computer screen capture.
 
-#### P4: Adding a process drama to the game making programme: April - May 2019
+#### P3: Adding a process drama to the game making programme: 5 weeks in May 2019
+
 
 P3 used the same toolset as P2 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens. The participant activity of these stages and tensions between system elements are discussed in detail in the remainder of this chapter and in following chapters.
 
-#### P4: Adapting to MakeCode Arcade and more formal settings: Jan 2020 - September 2020
+**Tools used:** As per P2; a drama scenario; side missions; a code project to interact with aliens using markdown code.   
 
- In 2019 MakeCode Arcade was launched to make games using for novice coders via the use of a block cI also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter.oding approach. In 2020 I ran two iterations of game making course using MakeCode Arcade. The facilitation techniques and approach were adapted from those of P2 to facilitate the use of the block coding language [^1]. Tool use at this stage is also explored in a chapter in a collection on K-12 computing education [@chesterman_game_2023].
+#### P4: Adapting resources to MakeCode Arcade and more formal settings - November 2019 to September 2020
 
-I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter.
+In 2019 MakeCode Arcade was launched to make games using for novice coders via the use of a block coding systems similar to Scratch. I adapted resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter. I ran two iterations of game making course using MakeCode Arcade. The facilitation techniques and approach were adapted from those of P2 to facilitate the use of the block coding language [^1]. Tool use at this stage is also explored in a chapter in a collection on K-12 computing education [@chesterman_game_2023].
 
+I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in chapter.
+
+**Tools used:** Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials ; Learning Dimensions Map.  
+
+Include footnote to online resources.
 
 <!-- At this stage of writing I include a bullet point list of design relevant features to be expanded later.
 
@@ -383,7 +367,7 @@ However in its styling it is playful and editorial picks and write up celebrate 
 <!-- The tool shown in screenshots is the code playground glitch (see chapter 2 and glossary). -->
 
 
-In line with the process outlined in chapter 3, the following sections outline different scopes of activity, at times using detail from vignettes described in the appendix to describe the activity of participants and to introduce tensions between system elements which are explored in this chapter.
+In line with the process outlined in chapter three, the following sections outline different scopes of activity to introduce tensions between system elements which are explored in this chapter.
 
 <!-- I use concepts from activity theory to describe elements of the activity system and identify intersecting or nested systems of activity and their differing goals. -->
 
@@ -399,11 +383,8 @@ Subsequent analysis of the identified activity systems allows both the researche
 
 ### Environmental factors and objectives
 
-In socio-cultural approaches is it important to situate the context of the learning environment within wider systems of activity. In line with Engestrom's concept of shared object explored in the previous chapter [@engestrom_expansive_2001], I have selected several relevant systems and represented them in an illustration 4.x  below.
-
-<!-- NOTE THERE IS A MISMATCH BETWEEN DIAGRAM AND THE OBJECTIVES - CHOOSE ONE - AND MAKE IT CLEAR -->
-
-This diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants. In the previous chapter we explored the technique of describing a shared object. The utility of this approach is to acknowledge and represent the diverse cultural contextual factors that are played out in a new space between diverse actors with different agendas.
+In socio-cultural approaches is it important to situate the context of the learning environment within wider systems of activity. In line with Engestrom's concept of shared object explored in the previous chapter [@engestrom_expansive_2001],
+several relevant systems and represented them in an illustration 4.x  below. The diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants. Diverse cultural and contextual factors from the original activity systems are played out in a new shared activity system, while there is a nominal shared objective to the main activity, it the community contains diverse actors with different agendas.
 
 
 <!--
@@ -414,9 +395,10 @@ Other relevant objectives of re include: a desire to create a useful learning ex
 
 ![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
 
-In this research I take the approach of treating this shared object as an activity system in its own right. Lecusay takes a sim**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
+In this research I take the approach of treating this shared object as an activity system in its own right. Lecusay takes a similar approach [@lecusay_telementoring_2015] and describes the shared object as an ideocultural hybrid which develops into its own activity system. The concept of ideoculture is used in this study  to deepen the description of the community dimension of 3GAT.
 
-ilar approach [@lecusay_telementoring_2015] and describes the shared object as an ideocultural hybrid which develops into its own activity system. The concept of ideoculture is used in this study  to deepen the description of the community dimension of 3GAT.
+
+
 
 <!-- NOTE - WHY IS THE CONCEPT OF IDEOCULTURE USEFUL HERE? -->
 
@@ -429,7 +411,7 @@ ilar approach [@lecusay_telementoring_2015] and describes the shared object as a
 
 <!-- | **Subject**         | **Objective**             | **Tools & Processes**          |
 |------|-------------|------------|
-| Community of novice game makers | Creating a game which is fun to play and communicates an environmental theme     | Shared log in to code playground (glitch.com)   |
+| Community of novice game makers | Creating a game which is fun to play and communi**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.cates an environmental theme     | Shared log in to code playground (glitch.com)   |
 |   |      | Shared log in to graphic editor (Piskel)    |
 |   |      | Instructions from facilitator including the overall mission   |
 |   |      | Starting game template    |
@@ -1499,6 +1481,8 @@ AND - link more -->
 The introduction of a drama process was introduced in response to a the barriers to participation caused by not identifying with the culture of coding or gaming.
 
 
+The drama process is an example of an introduced cultural tool. The process acts as wrapper to several supporting techniques. the side missions to and to sanction different approaches, the imagined audience encourages reflection and semi-authentic approaches. It is the most advanced tools of a range that was put into place to create a space suitable for creativity, collaboration and self expression.
+
 
 #### Motivations and genesis of the drama process (what kind of Maker are you)
 
@@ -1528,8 +1512,6 @@ This simple question "What kind of game maker are you?" - is a good indicator to
 I incorporated it into an animation of the resources home page.
 
 ![Illustration 4.x - What kind of game maker are you  ](./Pictures/kindofgamemaker.png){width=95%}
-
-
 
 
 
@@ -1717,7 +1699,6 @@ The positive reaction of young people to the drama process was also picked up in
 
 #### Observations on written interactions with the alien in the drama
 
-
 As previously explored, an emerging area of tensions that I noted in journal notes and in feedback from participants was the area of supporting documentation and resources. In addition to the careful technical and pedagogical creation and organisation of resources undertaken in P2, I sought a way for participants to be aware of and access relevant documentation without interrupting their creative flow or the fun of the experiences.  
 
 In P1 I created a mailing list for participants to ask technical and code questions of the wider group. My aim was to create a peer community helping each other rather than a helping relationship only between myself and individuals. However, this email list was hardly used for this purpose. Two parents shared that they were reluctant to bother other participants with their own issues. To address this in P3, as part of the drama process, I encouraged participants to write to the aliens to ask help. This is described and illustrated in appendix 4.x.
@@ -1893,9 +1874,6 @@ In summary, this chapter has explored the complexity of the interacting tools an
 <!-- Later, chapter six  chapter explores the potential for drama processes to address learner anxiety in this domain. -->
 
 ### Summary of barriers and tensions explored in this chapter
-
-
-
 
 
 The following summary table lists barriers and tensions drawn from the literature review that were significant when reviewing my journal observations, feedback from participants and video data. The purpose of this summary is to help recap and ground the reader before exploring the experiences of participants in more detail in chapters five and six. It focuses on use of tools but also signposts some social and cultural elements.
